IMG-612 Prevent collapsed nav. Handle duplicate images. Handle changes made by other users since load.

--- a/public/stylesheets/poet2.css
+++ b/public/stylesheets/poet2.css
@@ -10,6 +10,7 @@ html, body {
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
+  min-width: 970px !important;
 	/* Negative indent footer by it's height */
 	margin: 0 auto -60px;
 }
@@ -38,6 +39,7 @@ html, body {
 }
 
 #header {
+  min-width: 1050px;
   background: #6a7176;
   background: -webkit-linear-gradient(-90deg, #6a7176, #4d5256);
   background: -moz-linear-gradient(-90deg, #6a7176, #4d5256);
